--- a/node-server.deploy.yaml
+++ b/node-server.deploy.yaml
@@ -5,6 +5,10 @@ metadata:
   name: node-server-deployment
 spec:
   replicas: 4
+  strategy: # 滚动更新策略
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1 # 最小不可用的服务数
   selector:
     matchLabels:
       app: node-server-pod
@@ -14,11 +18,17 @@ spec:
         app: node-server-pod
     spec:
       containers:
-        - image: wuyupei/node-server:v8.0.0
+        - image: wuyupei/node-server:v10.0.1
           name: node-server-container
-          livenessProbe:
+          livenessProbe: #存活探针
             httpGet:
               path: /health
               port: 3000
             initialDelaySeconds: 3
             periodSeconds: 3
+          readinessProbe: #就绪探针
+            httpGet:
+              path: /health
+              port: 3000
+            initialDelaySeconds: 3
+            successThreshold: 1
